<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.saba.sample_database_realm_mvp_dager.presentaton.add.AddingFragment">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_margin="6dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/username"
            android:background="@color/colorAccent"/>
        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/repos_list"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get"
            android:id="@+id/get"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>

</FrameLayout>
